[package]
name = "cosmwasm_contract"
version = "0.1.0"
authors = ["Fábio Soares <fsoares.developer@gmail.com>"]
edition = "2021"
description = ""
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.2"
cosmwasm-std = { version = "1.2.2", features = ["stargate"] }
cosmwasm-storage = "1.2.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }